# PGN_to_latex_CPP-src-code

./: .gitignore  README.md  index.html  index.php  style.css  upload.php
R_208/: laposte.php
libpgnp/: .gitignore  Makefile  main  main.cpp  main_BACKUP_466917  main_REMOTE_466917
libpgnp/converted/: file.tex  test.tex
libpgnp/pgnp/libs/chess-move-interface/: .gitlab-ci.yml  CMakeLists.txt  README.md
libpgnp/pgnp/libs/chess-move-interface/src/: CMI.cpp  CMI.hpp
libpgnp/pgnp/libs/chess-move-interface/tests/: CMakeLists.txt  cmi_tests.cpp
libpgnp/pgnp/tests/: from_string.cpp
libpgnp/tmp/: Adams.pgn
